# Light

./: .gitignore  AGENTS.md  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts
script/TestDevice/: README.md  USAGE.md  config_generator_gui.py  example_config.json  main.py  requirements-gui.txt  requirements.txt  virtual_led_device.py
script/TestDevice/app/: presets.py
script/TestDevice/presets/: example.json
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json  tauri.macos.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: interface.rs  lib.rs  main.rs  manager.rs  resource.rs
src-tauri/src/api/: commands.rs  config_store.rs  dto.rs  mod.rs
src-tauri/src/interface/: controller.rs  effect.rs  mod.rs
src-tauri/src/interface/controller/: mod.rs
src-tauri/src/interface/effect/: mod.rs
src-tauri/src/manager/: inventory.rs  mod.rs  runner.rs
src-tauri/src/resource/: controller.rs  effect.rs
src-tauri/src/resource/audio/: manager.rs  mod.rs  screencapturekit_audio.rs
src-tauri/src/resource/audio/MacOS/: capturer.rs  mod.rs
src-tauri/src/resource/controller/: drgb_hid.rs  mod.rs  skydimo_controller.rs
src-tauri/src/resource/controller/led_matrix_udp/: mod.rs  protocol.rs
src-tauri/src/resource/controller/skydimo/: mod.rs  protocol.rs
src-tauri/src/resource/controller/skydimo_controller/: mod.rs
src-tauri/src/resource/controller/skydimo_serial/: config.rs  device_config.rs  mod.rs  protocol.rs
src-tauri/src/resource/driver/: mod.rs
src-tauri/src/resource/driver/serail_port/: mod.rs
src-tauri/src/resource/effect/: rainbow.rs  turn_off.rs
src-tauri/src/resource/effect/audio_star/: mod.rs
src-tauri/src/resource/effect/matrix_test/: mod.rs
src-tauri/src/resource/effect/monochrome/: mod.rs
src-tauri/src/resource/effect/rainbow/: mod.rs
src-tauri/src/resource/effect/screen_mirror/: border.rs  mod.rs  params.rs  renderer.rs
src-tauri/src/resource/effect/turn_off/: mod.rs
src-tauri/src/resource/lut/: mod.rs
src-tauri/src/resource/screen/: mod.rs  screencapturekit_backend.rs  xcap_backend.rs
src-tauri/src/resource/screen/MacOS/: capturer.rs  config.rs  display.rs  frame.rs  manager.rs  mod.rs
src-tauri/src/resource/screen/Windows/: graphics_capture.rs  mod-deprecated.rs  mod.rs
src-tauri/src/resource/screen/Windows/DXGI/: mod.rs  shaders.rs
src-tauri/src/resource/screen/Windows/GDI/: mod.rs
src/components/: DynamicIcon.tsx  TitleBar.css  TitleBar.tsx
src/components/ui/: Button.tsx  Card.tsx  ColorPicker.tsx  Select.css  Select.tsx  Slider.css  Slider.tsx  Switch.css  Switch.tsx  Tabs.css  Tabs.tsx
src/data/: mockData.tsx
src/features/home/: HomePage.module.css  HomePage.tsx
src/hooks/: useDevices.ts  useEffects.ts  useLatestThrottledInvoker.ts  useLedStream.ts  useMinimizeToTray.ts  usePlatform.tsx
src/motion/: transitions.ts
src/services/: api.ts  config.ts  logger.ts
src/styles/: chakraSystem.ts  layout.css  theme.css  theme.ts
src/types/: config.ts  device.ts  effect.ts  index.ts  scope.ts
src/utils/: appSettings.ts  captureQuality.ts  deviceDisplay.ts  effectUtils.ts  effectsSort.ts  scope.ts  visualizerLayout.ts
(+31 files in other folders)
