[package]
name = "light"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "light_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serialport = "4.8.1"
hex = "0.4.3"
inventory = "0.3.21"
cpal = "0.15.3"
spectrum-analyzer = "1.7.0"
once_cell = "1.21.3"
mdns-sd = "0.17.1"
flume = "0.11.1"
window-vibrancy = "0.7.1"
tauri-plugin-os = "2.3.2"
rayon = "1.11.0"
tauri-plugin-log = "2.7.1"
log = { version = "0.4.29", features = ["kv", "kv_std"] }
hidapi = "2.6.4"

[target.'cfg(windows)'.dependencies]
winreg = "0.55.0"
windows = { version = "0.61.0", features = ["Win32_Foundation", "Win32_Graphics_Gdi", "Win32_UI_WindowsAndMessaging", "Win32_Graphics_Direct3D", "Win32_Graphics_Direct3D11", "Win32_Graphics_Dxgi", "Win32_Graphics_Dxgi_Common", "Win32_System_SystemInformation", "Win32_System_Com", "Graphics_Capture", "Graphics_DirectX_Direct3D11", "Graphics_Imaging", "Foundation", "System", "Win32_System_WinRT", "Win32_System_WinRT_Direct3D11", "Win32_System_WinRT_Graphics_Capture", "Graphics_DirectX", "Foundation_Metadata"], default-features = false }

[target.'cfg(target_os = "macos")'.dependencies]
screencapturekit = "1.4"

[target.'cfg(target_os = "linux")'.dependencies]
xcap = "0.7.1"
image = "0.25"

